fix gap

--- a/client/roommate-finder/src/header/Header.css
+++ b/client/roommate-finder/src/header/Header.css
@@ -21,7 +21,7 @@
 
 .nav {
     display: flex;
-    gap: 20px;
+    gap: 25px;
 }
 
 .nav-link {
